<resources>
    <string name="app_name">LabCoat</string>
    <string name="unknown">Unknown</string>
    <string name="or">or</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_activity">Activity</string>
    <string name="nav_todos">Todos</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_close">Close</string>
    <string name="action_assign">Assign</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_merge">Merge</string>
    <string name="action_erase">Erase</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy_git_https">Copy git https link</string>
    <string name="action_copy_git_ssh">Copy git ssh link</string>
    <string name="action_download">Download</string>
    <string name="title_project">Project</string>
    <string name="title_activity">Activity</string>
    <string name="title_commits">Commits</string>
    <string name="title_milestones">Milestones</string>
    <string name="title_issues">Issues</string>
    <string name="title_files">Files</string>
    <string name="title_merge_requests">Merge Requests</string>
    <string name="title_members">Members</string>
    <string name="title_pipelines">Pipelines</string>
    <string name="title_builds">Jobs</string>
    <string name="title_snippets">Snippets</string>
    <string-array name="main_tabs">
        <item>@string/title_project</item>
        <item>@string/title_activity</item>
        <item>@string/title_files</item>
        <item>@string/title_commits</item>
        <item>@string/title_pipelines</item>
        <item>@string/title_builds</item>
        <item>@string/title_milestones</item>
        <item>@string/title_issues</item>
        <item>@string/title_merge_requests</item>
        <item>@string/title_members</item>
        <item>@string/title_snippets</item>
    </string-array>
    <string name="title_all">All</string>
    <string name="title_yours">Yours</string>
    <string name="title_starred">Starred</string>
    <string-array name="projects_tabs">
        <item>@string/title_all</item>
        <item>@string/title_yours</item>
        <item>@string/title_starred</item>
    </string-array>
    <string name="title_projects">Projects</string>
    <string name="title_users">Users</string>
    <string-array name="search_tabs">
        <item>@string/title_projects</item>
        <item>@string/title_users</item>
    </string-array>
    <string name="title_todo">To do</string>
    <string name="title_done">Done</string>
    <string-array name="tabs_todo">
        <item>@string/title_todo</item>
        <item>@string/title_done</item>
    </string-array>
    <string name="login_button">Login</string>
    <string name="url_hint">URL (e.g. https://gitlab.com/)</string>
    <string name="url_gitlab">https://gitlab.com/</string>
    <string name="user_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="token_hint">Personal Access token</string>
    <string name="login_activity">Login</string>
    <string name="login_progress_dialog">Logging in. Please wait</string>
    <string name="advanced_login">Advanced Login</string>
    <string name="normal_link">Login using username or email</string>
    <string name="certificate_title">Certificate not trusted</string>
    <string name="certificate_message">The certificate the server used was not issued by a trusted authority.\n\nThis could mean a hacker is trying to intercept your communications.\n\nIf you trust the certificate, press OK to continue.\n\nFingerprint (SHA-1):\n%1$s</string>
    <string name="hostname_title">Hostname did not match</string>
    <string name="hostname_message">The hostname in the certificate did not match the hostname you are connecting to.\n\nThis could mean a hacker is trying to intercept your communications.\n\nIf you trust the certificate, press OK to continue.</string>
    <string name="not_a_valid_url">Not a valid URL</string>
    <string name="please_end_your_url_with_a_slash">Please end your URL with a "/"</string>
    <string name="not_a_valid_private_token">Not a valid private token</string>
    <string name="realm_message">A username and password are being requested by the server.\nThe server says: \"%1$s\"</string>
    <string name="already_logged_in">This account is already logged in</string>
    <string name="access_token_info_title">Personal Access Token</string>
    <string name="access_token_info_message">In order to log in to GitLab, you need to create a personal access token for the app to use. This is more secure than inputting your username and password, since those values could be tracked or used maliciously. You can create a personal access token under your settings > Access Tokens. Please select "api" as the scope of this token. You can leave "expires at" blank to never have the token expire.</string>
    <string name="create_personal_access_token">Create Personal Access Token</string>
    <string name="details">Details</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection failed</string>
    <string name="connection_error_commits">Failed to load commits</string>
    <string name="connection_error_issues">Failed to load issues</string>
    <string name="connection_error_files">Failed to load files</string>
    <string name="connection_error_users">Failed to load users</string>
    <string name="connection_error_feed">Failed to load feed</string>
    <string name="connection_error_merge_requests">Failed to load merge requests</string>
    <string name="connection_error_milestones">Failed to load milestones</string>
    <string name="connection_error_readme">Failed to load readme</string>
    <string name="connection_error_projects">Failed to load projects</string>
    <string name="login_unauthorized">Incorrect credentials. Try again</string>
    <string name="login_error">Login failed. Please check your login information</string>
    <string name="login_input_error">Please enter a valid url.</string>
    <string name="login_unsupported_authentication">Unsupported form of HTTP authentication.</string>
    <string name="login_404_error">Server not found. Please double check your url</string>
    <string name="no_error_details">No error details</string>
    <string name="file_too_big">File too big to show</string>
    <string name="file_load_error">Failed to load file</string>
    <string name="save_error">Could not write to storage medium</string>
    <string name="open_error">File could not be opened</string>
    <string name="input_error">Please enter a title</string>
    <string name="user_error">User could not be added</string>
    <string name="user_remove_error">User could not be removed</string>
    <string name="error_could_not_share">Could not share the link</string>
    <string name="error_no_browser">No browser on device. What are you doing?</string>
    <string name="error_user_conflict">There is a conflict in adding this user.</string>
    <string name="error_creating_account">Error creating account</string>
    <string name="error_failed_to_add_user">Failed to add user</string>
    <string name="required_field">Required Field</string>
    <string name="wait_for_project_to_load">Wait for the project to load!</string>
    <string name="error_401">Account credentials no longer valid. Please sign in again</string>
    <string name="projects">Projects</string>
    <string name="no_projects">No projects.</string>
    <string name="selected_content_description">Selected</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="ok_button">OK</string>
    <string name="filter_projects">Filter projects</string>
    <string name="logout_title">Are you sure you want to log out?</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="just_now">just now</string>
    <string name="failed_to_create_issue">Failed to create or modify issue</string>
    <string name="discard">Discard</string>
    <string name="are_you_sure_you_want_to_discard">Are you sure you want to discard?</string>
    <string name="failed_to_upload_file">Failed to upload file</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove?</string>
    <string name="no_readme_found">No README found for project</string>
    <string name="created_by">Created by %1$s</string>
    <string name="project_forked">Project forked into user namespace</string>
    <string name="project_starred">Project starred</string>
    <string name="project_already_starred">Project already starred</string>
    <string name="project_star_failed">Failed to star project</string>
    <string name="project_unstar">Unstar</string>
    <string name="fork_failed">Failed to fork project</string>
    <string name="project_unstarred">Project unstarred</string>
    <string name="unstar_failed">Failed to unstar project</string>
    <string name="project_fork_title">Fork Project</string>
    <string name="project_fork_message">Do you want to fork this project?</string>
    <string name="no_commits_found">No commits found.</string>
    <string name="file_saved">File saved successfully to Download folder</string>
    <string name="no_files_found">No files found.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="failed_to_copy_to_clipboard">Failed to copy to clipboard</string>
    <string name="root">ROOT</string>
    <string name="issue_tab_discussion">Discussion</string>
    <string name="issue_tab_details">Details</string>
    <string-array name="issue_tabs">
        <item>@string/issue_tab_details</item>
        <item>@string/issue_tab_discussion</item>
    </string-array>
    <string name="new_note_hint">Add comment</string>
    <string name="add_issue">Add new issue</string>
    <string name="add_issue_dialog_title">New issue</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="add_note_content_description">Add note</string>
    <string name="issue_number">Issue #%1$d</string>
    <string name="reopen">Reopen</string>
    <string name="close">Close</string>
    <string name="created_issue">created issue</string>
    <string name="error_changing_issue">There was an error changing the issue</string>
    <string name="no_issues">No issues</string>
    <string name="no_wiki">No wiki</string>
    <string name="add_new_label_title">Title</string>
    <string name="add_new_label_description">Description</string>
    <string name="add_new_label_color">Color</string>
    <string name="about">About</string>
    <string name="milestone_hint_title">Title</string>
    <string name="milestone_hint_description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="settings">Settings</string>
    <string name="branches">Branches</string>
    <string name="welcome">Welcome to LabCoat</string>
    <string name="welcome_message">We support GitLab.com, as well as any GitLab server running GitLab version 9.0 or later</string>
</resources>