<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_branch"
        app:showAsAction="ifRoom"
        android:title="@string/branches"
        android:icon="@drawable/ic_fork"/>

    <item
        android:id="@+id/action_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_24dp"/>

    <item
        android:id="@+id/action_copy_git_https"
        app:showAsAction="never"
        android:title="@string/action_copy_git_https"/>

    <item
        android:id="@+id/action_copy_git_ssh"
        app:showAsAction="never"
        android:title="@string/action_copy_git_ssh"/>

</menu>