<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/checkableGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_project_24dp"
            android:title="@string/nav_projects" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_24dp"
            android:title="@string/nav_groups" />
    </group>

    <group
        android:id="@+id/nonCheckableGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/about" />

    </group>

</menu>