<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/title_hint"
                android:inputType="text">

                <requestFocus />
            </EditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/lsep"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:id="@+id/lin"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:text="@string/save_button" />

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/progress"/>

</FrameLayout>