<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_label_title"
                android:imeOptions="actionNone"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_label_description"
                android:imeOptions="actionNone"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/root_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_new_label_color" />

            <ImageView
                android:id="@+id/image_color"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_add_96dp" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/progress_fullscreen" />

</FrameLayout>